--- a/package.json
+++ b/package.json
@@ -5,20 +5,22 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5.2.8",
-    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.91.1",
+    "@videosdk.live/react-native-sdk": "^0.3.4",
+    "@videosdk.live/react-sdk": "^0.6.7",
     "expo": "~54.0.32",
+    "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
@@ -31,16 +33,20 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-bottom-sheet": "^1.0.3",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-live-stream": "^1.0.1",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
+    "react-native-rtmp-publisher": "^0.4.7",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-video": "^6.19.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1"
   },
